# lisp-rpc

./: .gitignore  LICENSE  README.org
example-specs/: Spec.org  book-info.lisp
examples/rust/plain-mode-read-and-write-data/: Cargo.toml  README.org
examples/rust/plain-mode-read-and-write-data/src/: main.rs
examples/rust/spec-mode-generate-lib/: README.org  spec.lisprpc
examples/rust/spec-mode-generate-lib/src/: lib.rs
generators/lisp-rpc-rust-generator/: Cargo.toml  README.org
generators/lisp-rpc-rust-generator-demo/: Cargo.toml  README.org
generators/lisp-rpc-rust-generator-demo/src/: lib.rs  rpc_libs.rs
generators/lisp-rpc-rust-generator-macro/: Cargo.toml
generators/lisp-rpc-rust-generator-macro/src/: lib.rs
generators/lisp-rpc-rust-generator/src/: def_msg.rs  def_package.rs  def_rpc.rs  generater.rs  lib.rs  main.rs
generators/lisp-rpc-rust-generator/templates/: Cargo.toml.template  def_struct.rs.template  rpc_impl.template
parsers/lisp-rpc-rust-parser/: Cargo.toml
parsers/lisp-rpc-rust-parser/src/: data.rs  lib.rs  macros.rs
utils/: spec-checker-test.lisp  spec-checker.lisp
